--- a/frontend/src/app/shared/notifications/notifications.component.html
+++ b/frontend/src/app/shared/notifications/notifications.component.html
@@ -16,5 +16,8 @@
     <p>{{ selectedNotification.message }}</p>
     <p>{{ selectedNotification.info }}</p>
     <small>{{ selectedNotification.timestamp | date: 'long' }}</small>
+
+    <app-edit-apartment></app-edit-apartment>
   </div>
+
 </div>
