dodati btn za edit save i canclovanje

--- a/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
+++ b/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
@@ -55,7 +55,10 @@
   </div>
 
   <div class="button-container">
+    <button *ngIf="!isEditing" (click)="enableEditing()">Edit</button>
+    <button style="background-color: #B80C09;" *ngIf="!isEditing" (click)="deleteApartment()">Delete</button>
     <button *ngIf="isEditing" (click)="saveChanges()">Save</button>
+    <button style="background-color: #555" *ngIf="isEditing" (click)="cancelEditing()">Cancel</button>
   </div>
 
 </div>
