--- a/frontend/src/app/shared/notifications/notifications.component.html
+++ b/frontend/src/app/shared/notifications/notifications.component.html
@@ -17,7 +17,9 @@
     <p>{{ selectedNotification.info }}</p>
     <small>{{ selectedNotification.timestamp | date: 'long' }}</small>
 
-<!--    <app-edit-apartment [accommodation]="selectedNotification.apartment"></app-edit-apartment>-->
+    <app-apartment-view-basic [apartment]="selectedNotification.apartment"></app-apartment-view-basic>
+
+
   </div>
 
 
