--- a/frontend/src/app/shared/notifications/notifications.component.css
+++ b/frontend/src/app/shared/notifications/notifications.component.css
@@ -59,3 +59,21 @@
 .notification-details p {
   margin: 5px 0;
 }
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+ button {
+  display: block;
+  width: 15%;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  font-size: 1em;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
