--- a/frontend/src/app/features/apartment/calendar/calendar.component.css
+++ b/frontend/src/app/features/apartment/calendar/calendar.component.css
@@ -2,40 +2,78 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: Arial, sans-serif;
 }
 
 .calendar-header {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+.calendar-header button {
+  background-color: #707070;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.calendar-header button:hover {
+  background-color: #333;
+}
+
+.calendar-header span {
+  font-size: 18px;
+  font-weight: bold;
+  color: #707070;
 }
 
 .calendar-grid {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  grid-gap: 5px;
+  width: 100%;
 }
 
 .calendar-day {
-  padding: 10px;
+  padding: 15px 0; /* Povećan padding za visinu */
   text-align: center;
-  cursor: pointer;
-  border: 1px solid #ccc;
+  border-top: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  font-size: 14px;
+  color: #333;
+  min-height: 50px; /* Minimalna visina za dodatno povećanje */
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Centriranje brojeva */
+}
+
+.calendar-day:nth-child(7n) {
+  border-right: none; /* Uklanja desnu liniju na kraju nedelje */
 }
 
 .calendar-day.selected {
-  background-color: #4CAF50;
+  font-weight: bold;
+  background-color: green;
   color: white;
+
 }
 
 .calendar-day.reserved {
-  background-color: red;
+  font-weight: bold;
   color: white;
+  background-color: #B80C09;
   pointer-events: none;
 }
 
 .selected-dates {
   margin-top: 20px;
+  font-size: 14px;
 }
 
 .selected-dates ul {
