--- a/frontend/src/app/features/apartment/pricing-and-availability/pricing-and-availability.component.css
+++ b/frontend/src/app/features/apartment/pricing-and-availability/pricing-and-availability.component.css
@@ -13,8 +13,34 @@
   margin-bottom: 20px;
 }
 
+.container {
+  display: flex;
+  height: 100%;
+  max-height: 600px;
+}
+
+.left-side {
+  flex: 1.5;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  max-height: 100%;
+  overflow-y: auto;
+}
+
+.right-side {
+  flex: 2.5;
+  padding: 20px;
+}
+
 .form-group {
-  margin-bottom: 15px;
+  width: 100%;
+  max-width: 300px;
+  text-align: left;
+  margin-bottom: 65px;
 }
 
 .form-group label {
@@ -24,26 +50,39 @@
 
 .form-group input[type="number"],
 .form-group input[type="date"] {
-  width: 100%;
+  width: 68%;
   padding: 10px;
   margin-top: 5px;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 1em;
+  text-align: center;
 }
 
 .pricing-method-options {
   display: flex;
   gap: 20px;
+}
+
+.custom-radio {
+  display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
-.pricing-method-options label {
-  display: inline-block;
+.custom-radio input[type="radio"] {
+  appearance: none;
+  -webkit-appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #707070;
+  border-radius: 5px;
+  margin-right: 20px;
+  cursor: pointer;
 }
 
-.pricing-method-options input[type="radio"] {
-  margin-right: 5px;
+.custom-radio input[type="radio"]:checked {
+  background-color: #707070;
 }
 
 button {
