ne znam da li mi se svidja stil moracu jos doradit

--- a/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.css
+++ b/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.css
@@ -49,15 +49,12 @@
 
 .details-container {
   width: 90%;
-  border: solid red;
-
 }
 
 .details-container h2 {
   text-align: center;
   color: #333;
   margin-bottom: 50px;
-
 }
 
 .edit-details label {
@@ -66,9 +63,17 @@
 }
 
 .edit-details input,
-.edit-details textarea,
+.edit-details textarea
+{
+  width: 95,5%;
+  padding: 10px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
 .edit-details select {
-  width: 90%;
+  width: 100%;
   padding: 10px;
   margin-top: 5px;
   border: 1px solid #ccc;
@@ -97,7 +102,8 @@ button {
   display: flex;
   justify-content: space-between;
   gap: 20px;
-  margin-top: 10px;
+  width: 80%;
+  margin: 12px auto;
 }
 
 .guest-inputs div {
@@ -126,17 +132,52 @@ button {
   cursor: pointer;
 }
 
-.info-container{
+.info-container {
   width: 50%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  border: solid red;
   padding-bottom: 20px;
   margin: 0 auto;
 }
 
-.info-container input, select{
+.info-container input,
+.info-container select {
   text-align: center;
+}
+
+.file-upload-container {
+  position: relative;
+  width: 90%;
+  margin-top: 15px;
+}
+
+.file-upload-container label{
+  margin: auto;
+  width: 40%;
+}
+
+.file-upload-container input[type="file"] {
+  display: none;
+}
+
+.file-upload-button {
+  display: block;
+  width: 40%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  color: #333;
+  font-size: 1em;
+  cursor: pointer;
+  text-align: center;
+  transition: background-color 0.3s ease;
+  margin: 10px auto;
+}
+
+
+.file-upload-button:hover {
+  background-color: #e9ecef;
 }
