--- a/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
+++ b/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
@@ -51,8 +51,11 @@
         <label for="amenities">Amenities:</label>
         <input id="amenities" [(ngModel)]="apartment.amenities" type="text">
 
-        <label for="photos">Add Photos:</label>
-        <input type="file" id="photos" (change)="onFileSelected($event)" multiple />
+        <div class="file-upload-container">
+          <label for="photos">Add Photos:</label>
+          <button type="button" class="file-upload-button" (click)="fileInput.click()">Choose Files</button>
+          <input type="file" id="photos" #fileInput (change)="onFileSelected($event)" multiple style="display: none;" />
+        </div>
       </div>
 
       <div *ngIf="selectedSection === 'pricing'">
