--- a/frontend/src/app/features/apartment/pricing-and-availability/pricing-and-availability.component.html
+++ b/frontend/src/app/features/apartment/pricing-and-availability/pricing-and-availability.component.html
@@ -28,6 +28,6 @@
 
   <!-- Desna strana - 3/4 širine -->
   <div class="right-side" style="flex: 3; padding: 20px;">
-    <app-calendar></app-calendar>
+    <app-calendar [apartment]="apartment"></app-calendar>
   </div>
 </div>
