--- a/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
+++ b/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
@@ -5,6 +5,7 @@
     <button [class.active]="selectedSection === 'more'" (click)="selectedSection = 'more'">More Info</button>
     <button [class.active]="selectedSection === 'pricing'" (click)="selectedSection = 'pricing'">Pricing</button>
     <button [class.active]="selectedSection === 'availability'" (click)="selectedSection = 'availability'">Availability</button>
+    <button [class.active]="selectedSection === 'priceReview'" (click)="selectedSection = 'priceReview'">Price Review</button>
   </div>
 
   <!-- Desna strana -->
@@ -57,12 +58,16 @@
 
       <div *ngIf="selectedSection === 'pricing'">
         <h2>Edit Pricing</h2>
-
         <app-pricing-and-availability [apartment]="apartment"></app-pricing-and-availability>
       </div>
+
       <div *ngIf="selectedSection === 'availability'">
         <h2>Edit Availability</h2>
         <app-calendar [apartment]="apartment"></app-calendar>
+      </div>
+
+      <div *ngIf="selectedSection === 'priceReview'">
+        <h2>Price Review</h2>
 
       </div>
 
