--- a/frontend/src/app/features/apartment/price-review/price-review.component.html
+++ b/frontend/src/app/features/apartment/price-review/price-review.component.html
@@ -13,8 +13,8 @@
     </thead>
     <tbody>
     <tr *ngFor="let price of specialPrices">
-      <td>{{ price.start_date }}</td>
-      <td>{{ price.end_date }}</td>
+      <td>{{ price.startDate }}</td>
+      <td>{{ price.dateEnd }}</td>
       <td>{{ price.price | currency }}</td>
       <td>{{ price.availability }}</td>
     </tr>
