--- a/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
+++ b/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
@@ -68,7 +68,7 @@
 
       <div *ngIf="selectedSection === 'priceReview'">
         <h2>Price Review</h2>
-        <app-price-review></app-price-review>
+        <app-price-review [apartment]="apartment"></app-price-review>
 
 
       </div>
