kupi datume sa fronta i salje na bek

--- a/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.html
+++ b/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.html
@@ -30,4 +30,6 @@
   <div class="right-side" style="flex: 3; padding: 20px;">
     <app-calendar [apartment]="apartment"></app-calendar>
   </div>
+
 </div>
+<button (click)="sendToBackend()">Save</button>
