--- a/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
+++ b/frontend/src/app/features/apartment/edit-apartment/edit-apartment.component.html
@@ -63,7 +63,7 @@
 
       <div *ngIf="selectedSection === 'availability'">
         <h2>Edit Availability</h2>
-        <app-calendar [apartment]="apartment"></app-calendar>
+        <app-calendar [apartment]="apartment" [isEditAvailability]="true"></app-calendar>
       </div>
 
       <div *ngIf="selectedSection === 'priceReview'">
