--- a/frontend/src/app/features/apartment/calendar/calendar.component.html
+++ b/frontend/src/app/features/apartment/calendar/calendar.component.html
@@ -8,6 +8,7 @@
     <div class="calendar-day" *ngFor="let date of datesInMonth"
          [class.selected]="isSelected(date)"
          [class.reserved]="isReserved(date)"
+         [class.disabled]="isReserved(date)"
          (mousedown)="onMouseDown(date)"
          (mouseup)="onMouseUp()"
          (mouseover)="onMouseOver(date)">
