--- a/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.html
+++ b/frontend/src/app/features/apartment/SpecialPricing/SpecialPricing.html
@@ -32,4 +32,7 @@
   </div>
 
 </div>
-<button (click)="sendToBackend()">Save</button>
+
+<div class="button-container">
+  <button (click)="sendToBackend()">Save</button>
+</div>
