--- a/frontend/src/app/shared/navbar/navbar.component.css
+++ b/frontend/src/app/shared/navbar/navbar.component.css
@@ -14,7 +14,8 @@ body {
   display: flex;
   justify-content: center;
   width: 95%;
-  background-color: rgba(30, 30, 30, 0.1);
+  /*background-color: rgba(30, 30, 30, 0.1);*/
+  background-color: rgba(1, 94, 97, 0.6);
   backdrop-filter: blur(10px);
   padding: 20px 0;
   margin: 0 auto;
