--- a/frontend/src/app/features/apartment/apartment-view-guest/reservation-dialog/reservation-dialog.component.html
+++ b/frontend/src/app/features/apartment/apartment-view-guest/reservation-dialog/reservation-dialog.component.html
@@ -9,6 +9,12 @@
         <p><strong>Email:</strong> {{ user.email }}</p>
         <p><strong>Address:</strong> {{ user.address }}</p>
         <p><strong>Phone:</strong> {{ user.phone }}</p>
+
+        <hr>
+
+        <p><strong>Selected days:</strong> 7 </p>
+        <p><strong>Price: {{data.accommodation.price}}  $</strong></p>
+
       </div>
 
       <div class="calendar">
